# thebear-api

./: .dockerignore  .env-example  .gitignore  README.md  docker-compose.yaml  dockerfile  pyproject.toml
app/: main.py
app/db/: connection.py  models.py  repository.py
app/migrations/: env.py
app/migrations/versions/: 05c7996fbb66_updated_check_field_to_check_id_on_.py  0f9a597aaf19_added_stock_to_product_model.py  14e7d6fa4327_created_check_table_added_check_id_to_.py  29e8900b1de8_add_password_field_to_client_table.py  3a4322562417_models_with_varchar.py  46fcdeb3d0b1_updated_field_status_from_order_to_.py  48ab38b112e4_update_cascade_on_category_and_products_.py  4b12de1d5d6d_updating_length_varchar_models.py  5934348d558c_updated_check_id_on_order_to_be_able_to_.py  8e0ec7508fdb_update_set_null_on_category_and_.py  9833e991ad50_changed_username_of_user_model_to_unique.py  a54b2100464f_models.py  c40df5fd3add_created_field_client_id_on_orderitem_to_.py  d56cd480b0c5_changed_model_client_and_created_model_.py  d95e797e0e97_updated_relationship_of_check_order.py  e0888f99f624_nullable_ordemitem_fks.py  (+3 more)
app/repositories/: base.py
app/routes/: category.py  check.py  client.py  deps.py  order.py  product.py  user.py
app/schemas/: category.py  check.py  client.py  order.py  order_item.py  product.py  user.py
app/services/: category_services.py  check_services.py  client_services.py  order_services.py  product_services.py  sqlalchemy_repository.py  user_services.py
app/tests/: conftest.py
scripts/: clean_tables.sh  sqlquery.sh  startup.sh  wait_mysql.sh
(+28 files in other folders)
